[package]
name = "ubi-dbdata"
version = "1.0.0"
edition = "2024"

[lib]
name = "dbdata"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
winapi = { version = "0.3.9", features = ["minwindef", "winuser", "libloaderapi"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
